Fix spacing of main content

--- a/docs/src/styles/_main.scss
+++ b/docs/src/styles/_main.scss
@@ -79,6 +79,10 @@
   min-width: 0;
   max-width: calc(tokens.get("main", "content-width") + tokens.get("main", "content-padding-x"));
   padding: tokens.get("main", "content-padding-y") tokens.get("main", "content-padding-x");
+
+  @include core.media-min("md") {
+    gap: 4em;
+  }
 }
 
 .main__footer {
